methods.picture.PatternPicture.scala.error
Compilation error:
PatternPicture:11: error: not found: value Fairemotif
  Fairemotif()
  ^